--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.223",
     "gatsby-image": "^1.0.41",
     "gatsby-link": "^1.6.38",
+    "gatsby-plugin-netlify-cms": "^1.0.11",
     "gatsby-plugin-react-helmet": "^2.0.6",
     "gatsby-plugin-sharp": "^1.6.39",
     "gatsby-plugin-styled-components": "^2.0.9",
@@ -16,14 +17,15 @@
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
